Update Support Faster Server Failover

--- a/Source/MacPatch/MacPatch/MacPatch/SoftwareViewController.xib
+++ b/Source/MacPatch/MacPatch/MacPatch/SoftwareViewController.xib
@@ -24,11 +24,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="1">
-            <rect key="frame" x="0.0" y="0.0" width="1000" height="705"/>
+            <rect key="frame" x="0.0" y="0.0" width="990" height="705"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="23">
-                    <rect key="frame" x="632" y="9" width="337" height="14"/>
+                    <rect key="frame" x="622" y="9" width="337" height="14"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                     <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" id="24">
                         <font key="font" metaFont="message" size="11"/>
@@ -61,26 +61,26 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                 </progressIndicator>
                 <imageView hidden="YES" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="22">
-                    <rect key="frame" x="975" y="9" width="14" height="14"/>
+                    <rect key="frame" x="965" y="9" width="14" height="14"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="WarningImage" id="25"/>
                 </imageView>
                 <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="92" horizontalPageScroll="10" verticalLineScroll="92" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="58">
-                    <rect key="frame" x="0.0" y="31" width="1000" height="516"/>
+                    <rect key="frame" x="0.0" y="31" width="990" height="516"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <clipView key="contentView" drawsBackground="NO" id="bwt-6z-Oqq">
-                        <rect key="frame" x="1" y="1" width="998" height="514"/>
+                        <rect key="frame" x="1" y="1" width="988" height="514"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="reverseSequential" selectionHighlightStyle="none" alternatingRowBackgroundColors="YES" columnReordering="NO" columnSelection="YES" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="90" rowSizeStyle="automatic" viewBased="YES" id="59">
-                                <rect key="frame" x="0.0" y="0.0" width="998" height="514"/>
+                                <rect key="frame" x="0.0" y="0.0" width="988" height="514"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <tableViewGridLines key="gridStyleMask" horizontal="YES"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
-                                    <tableColumn identifier="MainCell" width="986" minWidth="100" maxWidth="10000" id="63">
+                                    <tableColumn identifier="MainCell" width="976" minWidth="100" maxWidth="10000" id="63">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -93,7 +93,7 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
                                             <tableCellView identifier="MainCell" id="67" customClass="SoftwareCellView">
-                                                <rect key="frame" x="1" y="1" width="995" height="90"/>
+                                                <rect key="frame" x="1" y="1" width="985" height="90"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <imageView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="81">
@@ -138,7 +138,7 @@
                                                         </textFieldCell>
                                                     </textField>
                                                     <textField hidden="YES" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="86">
-                                                        <rect key="frame" x="827" y="67" width="148" height="15"/>
+                                                        <rect key="frame" x="817" y="67" width="148" height="15"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                                         <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="right" placeholderString="Install By 12/12/2012" id="98">
                                                             <font key="font" metaFont="message" size="11"/>
@@ -156,8 +156,8 @@
                                                         </textFieldCell>
                                                     </textField>
                                                     <progressIndicator hidden="YES" wantsLayer="YES" fixedFrame="YES" maxValue="100" indeterminate="YES" controlSize="small" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="89">
-                                                        <rect key="frame" x="658" y="37" width="227" height="20"/>
-                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                        <rect key="frame" x="658" y="37" width="217" height="20"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                     </progressIndicator>
                                                     <textField hidden="YES" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="90">
                                                         <rect key="frame" x="660" y="17" width="315" height="14"/>
@@ -169,7 +169,7 @@
                                                         </textFieldCell>
                                                     </textField>
                                                     <button toolTip="Install Software Item" verticalHuggingPriority="750" fixedFrame="YES" springLoaded="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dj9-bU-yB5" customClass="SYFlatButton">
-                                                        <rect key="frame" x="893" y="37" width="80" height="20"/>
+                                                        <rect key="frame" x="883" y="37" width="80" height="20"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                                         <buttonCell key="cell" type="smallSquare" title="Install" bezelStyle="smallSquare" alignment="center" lineBreakMode="truncatingTail" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="scw-0n-cUf">
                                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -224,7 +224,7 @@
                                                         <imageCell key="cell" controlSize="mini" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyUpOrDown" image="NSAdvanced" id="96"/>
                                                     </imageView>
                                                     <textField verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="91">
-                                                        <rect key="frame" x="895" y="4" width="84" height="13"/>
+                                                        <rect key="frame" x="885" y="4" width="84" height="13"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                                         <textFieldCell key="cell" controlSize="mini" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Reboot Required" placeholderString="" id="94">
                                                             <font key="font" metaFont="miniSystem"/>
@@ -269,7 +269,7 @@
                     </scroller>
                 </scrollView>
                 <wkWebView wantsLayer="YES" focusRingType="none" fixedFrame="YES" allowsLinkPreview="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ndj-oS-qTw">
-                    <rect key="frame" x="0.0" y="583" width="1000" height="122"/>
+                    <rect key="frame" x="0.0" y="583" width="990" height="122"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <wkWebViewConfiguration key="configuration">
                         <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
@@ -307,7 +307,7 @@
                     </connections>
                 </button>
                 <searchField wantsLayer="YES" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="28">
-                    <rect key="frame" x="780" y="555" width="200" height="19"/>
+                    <rect key="frame" x="770" y="555" width="200" height="19"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                     <searchFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" placeholderString="Name" usesSingleLineMode="YES" bezelStyle="round" id="35">
                         <font key="font" metaFont="message" size="11"/>
@@ -319,7 +319,7 @@
                     </connections>
                 </searchField>
             </subviews>
-            <point key="canvasLocation" x="-647" y="-770"/>
+            <point key="canvasLocation" x="-652" y="-770.5"/>
         </customView>
         <userDefaultsController representsSharedInstance="YES" id="40"/>
         <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="tHu-ib-dvr">
